# raffle-dapp

./: .gitignore  README.md
anchor/: Anchor.toml  createVrf.ts  heliusAirdrop.js  runAirdrop.js
anchor/programs/token_raffle/: Cargo.toml
anchor/programs/token_raffle/src/: lib.rs
anchor/tests/: token_raffle.spec.js  token_raffle.spec.ts
app/: layout.tsx  page.tsx  providers.tsx  useRaffleProgram.tsx
app/api/commit-randomness/: route.ts
app/components/: Button.tsx  Footer.tsx  Form.tsx  Navbar.tsx  RevealWinnerModal.tsx
app/lib/: WalletContextProvider.tsx  claimPrize.ts  commitRealRandomness.ts  initConfig.ts  initRaffle.ts  pda.ts  revealWinner.ts
app/my-tickets/: page.tsx
setup/: setup-local.sh  start-validator.sh
