[package]
name = "token_raffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_raffle"

[features]
default = []          # portfolio-friendly default
mock-randomness = []
switchboard = []                # read randomness bytes from a Switchboard-owned account

cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features =  ["init-if-needed"]}
anchor-spl = {version = "0.31.1", features = ["metadata"]}  
switchboard-on-demand = "0.4.9"
mpl-token-metadata = "5.1.1"  # Latest stable version

